sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:15: error: '<-' expected but ')' found.
  for(i -> 1 to len-1){
                     ^AlgInsertionSort:23: error: illegal start of simple expression
} 
^